Done with swipe to delete, drag and drop

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,44 @@
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="loading_image">Loading Image...</string>
-    <string name="image_loaded">Image Loaded successfully!</string>
-    <string name="image_load_failed">Image loading failed! : $1%s</string>
-    <string name="refresh">Refresh</string>
-    <string name="cliff">Cliff</string>
-    <string name="add_image">Add Image</string>
-    <string name="width">Width</string>
-    <string name="height">Height</string>
-    <string name="enter_image_dimensions">Enter image dimensions</string>
-    <string name="fetch_image">FETCH IMAGE</string>
-    <string name="fetching_random_image">Fetching random image...</string>
     <string name="Labelhint">Label</string>
     <string name="Palette_ColorTV">Choose a Palette color</string>
     <string name="LabelTV">Choose a Label</string>
     <string name="Update_and_add_from_Gallery">ADD</string>
     <string name="no_items_try_adding_from_the_action_above">No items. Try adding from the action above</string>
     <string name="search">Search</string>
+    <string name="drag_and_drop_toggle">Drag and drop toggle</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="custom">Custom</string>
+    <string name="ocean">Ocean</string>
+    <string name="app_name">My Gallery</string>
+    <string name="content_description_of_image">Content Description of Image</string>
+    <string name="cliff">Cliff</string>
+    <string name="add_image">Add Image</string>
+    <string name="add_image_from_internet">Add Image from Internet</string>
+    <string name="enter_image_dimensions">Enter image dimensions</string>
+    <string name="width">Width</string>
+    <string name="height">Height</string>
+    <string name="fetching_random_image">Fetching random image…</string>
+    <string name="choose_a_palette_colour">Choose a palette colour</string>
+    <string name="choose_a_label">Choose a label</string>
+    <string name="label">Label</string>
+    <string name="add">Add</string>
+    <string name="no_items_to_show_try_adding_from_the_action_above">No items to show!\n Try adding from the actions above.</string>
+    <string name="add_image_from_device">Add Image from Device</string>
+    <string name="share">Share</string>
+    <string name="editCard">Edit</string>
+    <string name="deleteCard">Share</string>
+    <string name="search_image">Search Image</string>
+    <string name="sort_alphabetically">Sort Alphabetically</string>
+    <string name="drag_and_drop">drag_and_drop</string>
+    <string name="no_items_found">No items found.</string>
+    <string name="no_items_to_sort">"No items available to sort. "</string>
+    <string name="fetching_image">Fetching image…</string>
+    <string name="choose_a_new_palette_color">Choose a new palette color</string>
+    <string name="edit_image">Edit Image</string>
+    <string name="update">Update</string>
+    <string name="loading_image">Loading Image....</string>
+    <string name="choose_a_new_label">Choose a new label</string>
+    <string name="fetch_image_btn">Fetch Image</string>
+    <string name="fetch_image">Fetch Image</string>
 </resources>
